# land-report

./: .dockerignore  .gitignore  513438999.xml  Dockerfile  README.md  bacen_report.py  bocom_bbm_report.qmd  bocom_bbm_report_bkp.qmd  pyproject.toml  routine.py
_extensions/PrettyPDF/: PrettyPDF.tex  _extension.yml
